--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en" data-critters-container><head>
   <meta charset="utf-8">
   <title>Portfolio</title>
-  <base href="/portfolio">
+  <base href="/portfolio-deploy/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles-5INURTSO.css"><style ng-app-id="ng">[_nghost-ng-c104609231]{display:flex;align-items:center;width:100vw;height:100vh;margin:0;position:absolute;top:0;left:0;background-color:#f0f0f0}html[_ngcontent-ng-c104609231], body[_ngcontent-ng-c104609231]{height:100%;margin:0}.name-wrapper[_ngcontent-ng-c104609231], .about-wrapper[_ngcontent-ng-c104609231]{display:flex;align-items:center;margin-left:20vw;position:relative}.intro[_ngcontent-ng-c104609231]{position:relative}.name[_ngcontent-ng-c104609231]{font-size:4vw}.about[_ngcontent-ng-c104609231]{font-size:2vw}.box[_ngcontent-ng-c104609231]{position:absolute;left:0;background-color:#3498db;color:#fff;overflow:hidden;width:100%;height:70%}.name[_ngcontent-ng-c104609231], .about[_ngcontent-ng-c104609231]{margin-top:2vh;margin-bottom:2vh}</style></head>
