--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <link rel="stylesheet" href="styles-5INURTSO.css"><style ng-app-id="ng">[_nghost-ng-c3649716611]{display:flex;align-items:center;width:100vw;height:100vh;margin:0;position:absolute;top:0;left:0;background-color:#f0f0f0}html[_ngcontent-ng-c3649716611], body[_ngcontent-ng-c3649716611]{height:100%;margin:0}.name-wrapper[_ngcontent-ng-c3649716611], .about-wrapper[_ngcontent-ng-c3649716611]{display:flex;align-items:center;margin-left:20vw;position:relative}.intro[_ngcontent-ng-c3649716611]{position:relative}.name[_ngcontent-ng-c3649716611]{font-size:4vw}.about[_ngcontent-ng-c3649716611]{font-size:2vw}.box[_ngcontent-ng-c3649716611]{position:absolute;left:0;background-color:#3498db;color:#fff;overflow:hidden;width:100%;height:70%}.name[_ngcontent-ng-c3649716611], .about[_ngcontent-ng-c3649716611]{margin-top:2vh;margin-bottom:2vh}</style></head>
 <body><!--nghm-->
   <app-root _nghost-ng-c3984273398 ng-version="17.3.12" ngh="0" ng-server-context="ssg"><router-outlet _ngcontent-ng-c3984273398></router-outlet><!----></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-AKCN7NYR.js" type="module"></script>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-7WIRFCGO.js" type="module"></script>
 
 <script id="ng-state" type="application/json">{"__nghData__":[{"c":{"0":[]}}]}</script></body></html>
